Fixed weird spacing in the center of the box

--- a/index.css
+++ b/index.css
@@ -11,3 +11,9 @@
 .raleway_font {
     font-family: 'Raleway', sans-serif;
 }
+
+
+.remove_image_padding{
+    padding-right: 0 !important;
+    padding-left: 0 !important;
+}
